# ose-primer

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlintignore  .nxignore  .prettierignore  .prettierrc.json  .shellcheckrc  .tool-versions  AGENTS.md  Brewfile  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  LICENSING-NOTICE.md  README.md  ROADMAP.md  codecov.yml  env-contract.yaml  go.work  go.work.sum  instruction-size-budget.yaml  nx.json  open-sharia-enterprise.sln  package-lock.json  package.json  repo-config.yml
apps/crud-be-python-fastapi/: Dockerfile.integration  README.md  alembic.ini  docker-compose.integration.yml  project.json  pyproject.toml
apps/crud-be-python-fastapi/alembic/: env.py
apps/crud-be-python-fastapi/src/crud_be_python_fastapi/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/crud-be-python-fastapi/tests/: __init__.py  conftest.py
apps/crud-be-python-fastapi/tests/integration/: conftest.py  service_client.py
apps/crud-be-python-fastapi/tests/unit/: conftest.py  in_memory_repos.py  test_config.py  test_currency.py  test_error_handlers.py  test_password_hasher.py  test_user_validation.py
apps/crud-be-rust-axum/: Cargo.toml  README.md  docker-compose.integration.yml  project.json
apps/crud-be-rust-axum/src/: app.rs  config.rs  main.rs  state.rs
apps/crud-be-rust-axum/src/auth/: jwt.rs  middleware.rs  password.rs
apps/crud-be-rust-axum/src/db/: attachment_repo.rs  expense_repo.rs  pool.rs  refresh_token_repo.rs  token_repo.rs  user_repo.rs
apps/crud-be-rust-axum/src/domain/: attachment.rs  errors.rs  expense.rs  types.rs  user.rs
apps/crud-be-rust-axum/src/handlers/: admin.rs  attachment.rs  auth.rs  expense.rs  health.rs  mod.rs  report.rs  test_api.rs  token.rs  user.rs
apps/crud-be-rust-axum/src/repositories/: sqlx_attachment_repo.rs  sqlx_expense_repo.rs  sqlx_refresh_token_repo.rs  sqlx_token_repo.rs  sqlx_user_repo.rs
apps/crud-be-rust-axum/tests/integration/: main.rs  world.rs
apps/crud-be-rust-axum/tests/unit/: in_memory_repos.rs  main.rs  world.rs
apps/rhino-cli/: Cargo.toml  README.md  deny.toml  go.mod  go.sum  project.json
apps/rhino-cli-rust/: .gitignore  Cargo.toml  README.md  deny.toml  project.json  rust-toolchain.toml
apps/rhino-cli-rust/scripts/: shadow-diff.sh  validate-cross-vendor-parity.sh
apps/rhino-cli-rust/src/: cli.rs  lib.rs  main.rs
apps/rhino-cli-rust/src/commands/: agents.rs  contracts.rs  docs.rs  doctor.rs  env.rs  env_validate.rs  git.rs  java.rs  mod.rs  repo_governance.rs  speccoverage.rs  testcoverage.rs  workflows.rs
apps/rhino-cli-rust/src/internal/: mod.rs
apps/rhino-cli-rust/tests/: agents.rs  docs.rs  doctor.rs  env.rs  git.rs  java.rs  repo_governance.rs  test_coverage.rs  workflows.rs
apps/rhino-cli/.amazonq/cli-agents/: ose-default.json
apps/rhino-cli/.amazonq/rules/: 00-agents-md.md
apps/rhino-cli/cmd/: agents_sync.go  agents_sync.integration_test.go  agents_sync_test.go  agents_validate_claude.go  agents_validate_claude.integration_test.go  agents_validate_claude_test.go  agents_validate_naming.go  agents_validate_naming.integration_test.go  agents_validate_naming_test.go  agents_validate_sync.go  agents_validate_sync.integration_test.go  agents_validate_sync_test.go  contracts_dart_scaffold.go  contracts_dart_scaffold.integration_test.go  contracts_dart_scaffold_test.go  contracts_java_clean_imports.go  contracts_java_clean_imports.integration_test.go  contracts_java_clean_imports_test.go  docs_validate_links.go  docs_validate_links.integration_test.go  docs_validate_links_test.go  docs_validate_mermaid.go  docs_validate_mermaid.integration_test.go  docs_validate_mermaid_helpers_test.go  docs_validate_mermaid_test.go  docs_validate_naming.go  docs_validate_naming.integration_test.go  docs_validate_naming_test.go  doctor.go  doctor.integration_test.go  doctor_test.go  env.go  env_backup.go  env_backup.integration_test.go  env_backup_test.go  env_init.go  env_init_test.go  env_restore.go  env_restore.integration_test.go  env_restore_test.go  (+29 more)
apps/rhino-cli/internal/agents/: agent_validator_test.go  converter.go  converter_test.go  sync_validator_test.go  types.go  types_test.go
apps/rhino-cli/internal/contracts/: dart_scaffold.go  dart_scaffold_test.go  java_clean_imports_test.go  reporter.go  reporter_test.go  types.go
apps/rhino-cli/internal/docs/: links_categorizer.go  links_reporter.go  links_reporter_test.go  links_scanner.go  links_scanner_test.go  prefix_rules_test.go  reporter_test.go
apps/rhino-cli/internal/doctor/: checker.go  checker_test.go  reporter.go  reporter_test.go  tools.go  types.go
apps/rhino-cli/internal/envbackup/: backup.go  backup_test.go  config.go  config_test.go  confirm.go  confirm_test.go  discover_test.go  reporter.go  reporter_test.go  restore.go  restore_test.go  types.go  worktree_test.go
apps/rhino-cli/internal/fileutil/: fileutil_test.go
apps/rhino-cli/internal/git/: runner.go  runner_test.go
apps/rhino-cli/internal/java/: validator.go
apps/rhino-cli/internal/mermaid/: extractor_test.go  graph.go  graph_test.go  parser.go  parser_test.go  reporter.go  reporter_test.go  types.go  validator.go  validator_test.go
apps/rhino-cli/internal/naming/: naming.go  naming_test.go
apps/rhino-cli/internal/repo-governance/: governance_vendor_audit.go  governance_vendor_audit_test.go
apps/rhino-cli/internal/speccoverage/: checker.go  types.go  (+7 more)
apps/rhino-cli/scripts/: deny-check.sh  shadow-diff.sh  validate-cross-vendor-parity.sh
apps/rhino-cli/src/: cli.rs  commands.rs  internal.rs  lib.rs  main.rs  test_support.rs
apps/rhino-cli/tests/: agent_naming_validator.rs  agents.rs  cargo_target_share.rs  cli_smoke.rs  contracts.rs  convention.rs  ddd.rs  docs.rs  doctor.rs  env.rs  env_contract.rs  env_validate.rs  env_validate_integration.rs  git.rs  git_hooks.rs  golden_master.rs  java.rs  mermaid_golden_corpus.rs  repo_config_data_driven.rs  repo_config_validate.rs  repo_governance.rs  spec_coverage.rs  specs_tree.rs  test_coverage.rs  workflows.rs
(+7716 files in other folders)
