[project]
name = "crud-be-python-fastapi"
version = "0.1.0"
description = "Python/FastAPI demo backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.136.3",
    # CVE-2026-48710 (BadHost): fastapi 0.136.3 only floors starlette at
    # >=0.46.0, so pin the patched starlette explicitly to keep the lock fixed.
    "starlette==1.2.1",
    "uvicorn[standard]==0.43.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",
    "pyjwt==2.12.1",
    "bcrypt==5.0.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-bdd==8.1.0",
    "coverage[toml]==7.13.5",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "pyright==1.1.408",
]

[tool.uv]
# Transitive-only constraints. pygments arrives via fastapi[standard] -> fastapi-cli
# -> rich. Pin its latest pre-cutoff release (2.20.0, 2026-03-29) which clears
# CVE-2026-4539 (ReDoS); uv otherwise resolves the older 2.19.2.
constraint-dependencies = ["pygments==2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crud_be_python_fastapi"]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-bdd==8.1.0",
    "coverage[toml]==7.13.5",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "pyright==1.1.408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_steps.py"]
markers = [
    "unit: unit tests",
    "integration: BDD integration tests",
]

[tool.coverage.run]
source = ["crud_be_python_fastapi"]
omit = [
    "tests/*",
    "*/crud_be_python_fastapi/routers/*",
    "*/crud_be_python_fastapi/main.py",
    "*/crud_be_python_fastapi/dependencies.py",
    "*/crud_be_python_fastapi/auth/dependencies.py",
    "*/crud_be_python_fastapi/infrastructure/repositories.py",
    "*/crud_be_python_fastapi/infrastructure/refresh_token_repository.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = [
    "B008",  # FastAPI Depends() in argument defaults is idiomatic and correct
    "N815",  # Pydantic response models use camelCase field names to match the camelCase JSON API contract
]

[tool.ruff.lint.per-file-ignores]
"tests/**/steps/*_steps.py" = ["E501"]  # Long BDD step strings must stay on one line for spec-coverage regex matching

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
