[project]
name = "crud-be-python-fastapi"
version = "0.1.0"
description = "Python/FastAPI demo backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.136.3",
    # CVE-2026-48710 (BadHost): fastapi 0.136.3 only floors starlette at
    # >=0.46.0, so pin the patched starlette explicitly to keep the lock fixed.
    "starlette==1.2.1",
    "uvicorn[standard]==0.43.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",
    "pyjwt==2.12.1",
    "bcrypt==5.0.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-bdd==8.1.0",
    "coverage[toml]==7.13.5",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "basedpyright==1.39.7",
]

[tool.uv]
# Transitive-only constraints. pygments arrives via fastapi[standard] -> fastapi-cli
# -> rich. Pin its latest pre-cutoff release (2.20.0, 2026-03-29) which clears
# CVE-2026-4539 (ReDoS); uv otherwise resolves the older 2.19.2.
constraint-dependencies = ["pygments==2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crud_be_python_fastapi"]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-bdd==8.1.0",
    "coverage[toml]==7.13.5",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "basedpyright==1.39.7",
    "vermin==1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_steps.py"]
markers = [
    "unit: unit tests",
    "integration: BDD integration tests",
    "e2e: BDD end-to-end tests (not run by this project's own tiers, but declared so pytest-bdd's Gherkin-tag-to-marker conversion doesn't trip --strict-markers on shared-tree scenarios also tagged @e2e for crud-be-e2e)",
]

[tool.coverage.run]
source = ["crud_be_python_fastapi"]
omit = [
    "tests/*",
    "*/crud_be_python_fastapi/routers/*",
    "*/crud_be_python_fastapi/main.py",
    "*/crud_be_python_fastapi/dependencies.py",
    "*/crud_be_python_fastapi/auth/dependencies.py",
    "*/crud_be_python_fastapi/infrastructure/repositories.py",
    "*/crud_be_python_fastapi/infrastructure/refresh_token_repository.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "SIM", "I", "N", "S", "RUF", "C4", "T20", "ANN"]
ignore = [
    "B008",    # FastAPI Depends() in argument defaults is idiomatic and correct
    "N815",    # Pydantic response models use camelCase field names to match the camelCase JSON API contract
    "ANN101",  # Deprecated: type annotation for `self` is unnecessary
    "ANN102",  # Deprecated: type annotation for `cls` is unnecessary
]

[tool.ruff.lint.per-file-ignores]
"tests/**/steps/*_steps.py" = ["E501"]  # Long BDD step strings must stay on one line for spec-coverage regex matching
"tests/**" = ["S101", "S105", "S106", "S107", "ANN"]  # pytest uses bare assert; S105-S107 are deterministic test-fixture passwords, not real secrets; BDD step/fixture annotations are exercised by basedpyright instead
"**/test_*.py" = ["S101", "S105", "S106", "S107", "ANN"]  # same: assert-based tests, fixture passwords, untyped fixtures

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# FastAPI registers route handlers and exception handlers via decorators, so basedpyright
# cannot see the call site and reports them as unused. The framework owns the call.
reportUnusedFunction = false

# Production code (src) runs under full strict. The BDD test glue deserializes dynamic JSON
# response bodies (FakeResponse.json() -> Any) and uses pytest-bdd fixtures whose values are
# injected dynamically, so the "Any propagation" diagnostics fire on essentially every
# assertion. Relax only that family for the tests tree; every other strict check (unused
# imports, missing returns, incompatible overrides, etc.) stays enabled.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
# tests use absolute imports rooted at the project dir (e.g. tests.integration.service_client),
# so keep the project root on the import path for this environment.
extraPaths = ["."]
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
