[package]
name = "crud-be-rust-axum"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"

[[test]]
name = "unit"
path = "tests/unit/main.rs"
harness = false

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = false

[dependencies]
crud-contracts = { path = "generated-contracts" }
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "any",
    "uuid",
    "chrono",
    "migrate",
] }
jsonwebtoken = "9.3.1"
bcrypt = "0.15.1"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
dotenvy = "0.15.7"
# envy 0.4.2 is the latest release (Jan 2021); stale but advisory-clean and
# functionally complete. Re-evaluate if a RustSec advisory (cf. RUSTSEC-2021-0141)
# is ever filed against envy.
envy = "0.4.2"
async-trait = "0.1.89"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
base64 = "0.22.1"
http = "1.4.0"
http-body-util = "0.1.3"

[dev-dependencies]
cucumber = { version = "0.21.1", features = ["libtest"] }
tokio = { version = "1.51.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
undocumented_unsafe_blocks = "deny"
# documented allows that override pedantic at priority 0 (match public's set):
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
