[package]
name = "rhino-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Repository Hygiene & INtegration Orchestrator — Rust port"
license = "MIT"
publish = false

[[bin]]
name = "rhino-cli"
path = "src/main.rs"

[lib]
name = "rhino_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
walkdir = "2.5.0"
ignore = "0.4.25"
regex = "1.12.3"
pulldown-cmark = "0.13.4"
tree-sitter = "0.26.9"
anyhow = "1.0.102"
quick-xml = { version = "0.40.1", features = ["serialize"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
glob = "0.3.3"
sha2 = "0.11.0"

[dev-dependencies]
cucumber = "0.23.0"
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }

# --- Cucumber harness suites (harness = false: each test file has its own main) ---
[[test]]
name = "agents"
harness = false

[[test]]
name = "contracts"
harness = false

[[test]]
name = "docs"
harness = false

[[test]]
name = "doctor"
harness = false

[[test]]
name = "cargo_target_share"
harness = false

[[test]]
name = "env"
harness = false

[[test]]
name = "env_contract"
harness = false

[[test]]
name = "repo_config_data_driven"
harness = false

[[test]]
name = "repo_config_validate"
harness = false

[[test]]
name = "agent_naming_validator"
harness = false

[[test]]
name = "java"
harness = false

[[test]]
name = "repo_governance"
harness = false

[[test]]
name = "spec_coverage"
harness = false

[[test]]
name = "workflows"
harness = false

[[test]]
name = "convention"
harness = false

[[test]]
name = "git_hooks"
harness = false

[[test]]
name = "test_coverage"
harness = false

[[test]]
name = "ddd"
harness = false

[[test]]
name = "specs_tree"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.rustdoc]
private_intra_doc_links = "deny"

[lints.clippy]
# Enable pedantic group at low priority — individual allows below override via priority 0
pedantic = { level = "warn", priority = -1 }

# --- Documented allows: structural choices for a CLI binary (not a public library) ---

# CLI arg structs legitimately carry multiple bool flags (verbose, dry-run, force, …)
struct_excessive_bools = "allow"

# Precision loss is acceptable for percentage/progress display in a CLI tool
cast_precision_loss = "allow"

# usize→i64 wrap is impossible in practice for the file counts this CLI handles
cast_possible_wrap = "allow"

# CLI binary — callers cannot accidentally discard return values; #[must_use] adds no value
must_use_candidate = "allow"

# Changing return types from Result<T> to T is an API break; deferred for later refactor
unnecessary_wraps = "allow"

# Extension comparisons use lowercase literals (.md, .feature) on a Linux-only CI filesystem;
# using Path::extension() would add allocation with no correctness benefit on case-sensitive fs
case_sensitive_file_extension_comparisons = "allow"

# --- Doc lints: all enforced as hard errors ---
missing_errors_doc = "deny"
missing_panics_doc = "deny"
doc_markdown = "deny"
missing_docs_in_private_items = "deny"

# --- Restriction lints (deny = hard error, cannot be suppressed by -D warnings alone) ---
unwrap_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"

# Configured but globally deferred: rhino-cli handles file/line counts (max ~millions, far below
# u64::MAX). Enabling these would require wrapping every arithmetic op and slice access in
# checked/get() variants with zero real safety benefit for this domain.
# TODO: tighten if the codebase gains financial or cryptographic arithmetic.
indexing_slicing = "allow"
arithmetic_side_effects = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
